--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
    "author": "Gustavo F",
    "license": "ISC",
    "dependencies": {
+      "class-validator": "^0.14.0",
       "express": "^4.18.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
+      "tsyringe": "^4.7.0",
       "typeorm": "0.3.16"
    },
    "devDependencies": {
